@@ -1,8 +1,8 @@
 package com.nhnacademy.frontserver1.application.service.impl;
 
 import com.nhnacademy.frontserver1.application.service.OrderService;
-import com.nhnacademy.frontserver1.application.service.dto.request.ReadMaximumDiscountCouponRequest;
 import com.nhnacademy.frontserver1.infrastructure.adaptor.AddressAdaptor;
+import com.nhnacademy.frontserver1.infrastructure.adaptor.BookAdapter;
 import com.nhnacademy.frontserver1.infrastructure.adaptor.CartAdaptor;
 import com.nhnacademy.frontserver1.infrastructure.adaptor.CouponAdaptor;
 import com.nhnacademy.frontserver1.infrastructure.adaptor.OrderAdaptor;
@@ -10,19 +10,27 @@ import com.nhnacademy.frontserver1.infrastructure.adaptor.PolicyAdaptor;
 import com.nhnacademy.frontserver1.infrastructure.adaptor.UserAdaptor;
 import com.nhnacademy.frontserver1.presentation.dto.request.order.CreateOrderRequest;
 import com.nhnacademy.frontserver1.presentation.dto.request.order.ReadCartBookResponse;
+import com.nhnacademy.frontserver1.presentation.dto.request.order.ReadOrderNoneMemberRequest;
+import com.nhnacademy.frontserver1.presentation.dto.request.order.UpdateOrderRequest;
+import com.nhnacademy.frontserver1.presentation.dto.response.book.BookResponse;
 import com.nhnacademy.frontserver1.presentation.dto.response.order.CreateOrderResponse;
 import com.nhnacademy.frontserver1.presentation.dto.response.order.ReadMaximumDiscountCouponResponse;
+import com.nhnacademy.frontserver1.presentation.dto.response.order.ReadMyOrderHistoryResponse;
+import com.nhnacademy.frontserver1.presentation.dto.response.order.ReadOrderDeliveryInfoResponse;
+import com.nhnacademy.frontserver1.presentation.dto.response.order.ReadOrderDetailResponse;
 import com.nhnacademy.frontserver1.presentation.dto.response.order.ReadOrderStatusResponse;
 import com.nhnacademy.frontserver1.presentation.dto.response.order.ReadOrderUserAddressResponse;
 import com.nhnacademy.frontserver1.presentation.dto.response.order.ReadOrderUserInfoResponse;
-import com.nhnacademy.frontserver1.presentation.dto.response.order.ReadPaymentOrderResponse;
+import com.nhnacademy.frontserver1.presentation.dto.response.order.ReadPurePriceResponse;
 import com.nhnacademy.frontserver1.presentation.dto.response.order.ReadShippingPolicyResponse;
 import com.nhnacademy.frontserver1.presentation.dto.response.order.ReadTakeoutResponse;
+import com.nhnacademy.frontserver1.presentation.dto.response.order.UpdateOrderResponse;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Objects;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
@@ -35,6 +43,7 @@ public class OrderServiceImpl implements OrderService {
     private final CartAdaptor cartAdaptor;
     private final AddressAdaptor addressAdaptor;
     private final UserAdaptor userAdaptor;
+    private final BookAdapter bookAdapter;
     private final CouponAdaptor couponAdaptor;
 
     @Override
@@ -64,15 +73,15 @@ public class OrderServiceImpl implements OrderService {
     }
 
     @Override
-    public List<ReadCartBookResponse> findAllCartBok() {
-//        return cartAdaptor.getCartBooks();
+    public List<ReadCartBookResponse> getOrderBook(Long bookId, Integer quantity) {
+        if (Objects.nonNull(bookId) && Objects.nonNull(quantity)) {
+            BookResponse bookResponse = bookAdapter.findBookById(bookId);
+            ReadCartBookResponse readCartBookResponse = ReadCartBookResponse.from(bookResponse, quantity);
 
-        return List.of(ReadCartBookResponse.fromTest());
-    }
+            return Collections.singletonList(readCartBookResponse);
+        }
 
-    @Override
-    public List<ReadPaymentOrderResponse> findAllOrderByOrderId(String orderId) {
-        return orderAdaptor.findAllByOrderId(orderId);
+        return cartAdaptor.getCartBooks();
     }
 
     @Override
@@ -96,5 +105,37 @@ public class OrderServiceImpl implements OrderService {
 //        return couponAdaptor.getMaxDiscountCouponByTotalAmount(request);
 
         return ReadMaximumDiscountCouponResponse.fromTest();
+    }
+
+    @Override
+    public Page<ReadMyOrderHistoryResponse> getMyOrders(Pageable pageable) {
+        return orderAdaptor.getMyOrders(pageable);
+    }
+
+    @Override
+    public ReadPurePriceResponse getPurePrice() {
+//        return userAdaptor.getPurePrice();
+
+        return ReadPurePriceResponse.fromTest();
+    }
+
+    @Override
+    public UpdateOrderResponse updateOrderByOrderId(String orderId, UpdateOrderRequest request) {
+        return orderAdaptor.updateOrderByOrderId(orderId, request);
+    }
+
+    @Override
+    public ReadOrderDeliveryInfoResponse getMyOrderDelivery(String orderId) {
+        return orderAdaptor.getMyOrderDeliveryByOrderId(orderId);
+    }
+
+    @Override
+    public ReadOrderDetailResponse getMyOrderByOrderId(String orderId) {
+        return orderAdaptor.getMyOrderByOrderId(orderId);
+    }
+
+    @Override
+    public ReadOrderDetailResponse findOrderNoneMemberByOrderIdAndEmail(ReadOrderNoneMemberRequest request) {
+        return orderAdaptor.findOrderNoneMemberByOrderIdAndEmail(request.orderId(), request.email());
     }
 }
